examples/test/testpolicy6658.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6658
  namespace: namespace102
spec:
  podSelector:
    matchLabels:
      key47: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value10
          key22: value44
          key40: value7
      podSelector:
        matchLabels:
          key43: value37
